fix of type